fix letter spacing in front-end developer home component

--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -109,6 +109,8 @@
 .fe-dev {
   letter-spacing: 0.6rem;
   font-weight: 600;
+  text-indent: -0.6rem;
+  direction:rtl;
 }
 
 .image-project {
